--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "^11.1.0",
+    "opn": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
 }
