--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "@fontsource/poppins": "^4.5.0",
     "axios": "^0.21.1",
+    "mongoose": "^5.13.7",
     "next": "^11.1.0",
     "opn": "^6.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-table": "^7.7.0"
   },
   "scripts": {
     "dev": "next dev",
